Add CMake module to find CLTune (requires running `make install` for CLTune). Remove all CLTune files from repository.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.1.0)
 project(CLTuneDemosProject)
 
-set(CLTUNE_DIR ${CMAKE_SOURCE_DIR}/cltune)
-
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules/)
 
-find_Package(OpenCL REQUIRED)
-set(FRAMEWORK_INCLUDE_DIRS ${OPENCL_INCLUDE_DIRS} ${CLTUNE_DIR})
-set(FRAMEWORK_LIBRARY_DIRS ${CLTUNE_DIR})
-set(FRAMEWORK_LIBRARIES ${OPENCL_LIBRARIES} cltune)
+find_package(OpenCL REQUIRED)
+find_package(CLTune REQUIRED)
+
+set(FRAMEWORK_INCLUDE_DIRS ${OPENCL_INCLUDE_DIRS} ${CLTUNE_INCLUDE_DIR})
+# set(FRAMEWORK_LIBRARY_DIRS ${CLTUNE_DIR})
+set(FRAMEWORK_LIBRARIES ${OPENCL_LIBRARIES} ${CLTUNE_LIBRARY})
 
 include_directories(${FRAMEWORK_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/util/include/)
 link_directories(${FRAMEWORK_LIBRARY_DIRS})
